I'm done with this DOM :)

--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,9 @@
               24 jam.
             </p>
             <div class="text-md-start">
-              <button class="btn btn-start rounded-1">Mulai Sewa Mobil</button>
+              <button class="btn btn-start rounded-1">
+                <a href="cars.html">Mulai Sewa Mobil</a>
+              </button>
             </div>
           </div>
           <div
