--- a/public/cars.html
+++ b/public/cars.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BCR - Binar Car Rental</title>
 
-    <!-- Bootstrap -->
+    <!-- Boostrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -25,12 +25,11 @@
   </head>
 
   <body>
-    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light navbar-color">
       <div class="container">
-        <a href="/" class="text-black text-decoration-none">
-          <span class="fs-4">Najmi Raihan</span>
-        </a>
+        <a href="/" class="text-black text-decoration-none"
+          ><span class="fs-4">Najmi Raihan</span></a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -57,7 +56,7 @@
               <a class="nav-link" href="#">FAQ</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link custom-button rounded-1">Register</a>
+              <a href="" class="nav-link custom-button rounded-1">Register</a>
             </li>
           </ul>
         </div>
@@ -78,7 +77,9 @@
               24 jam.
             </p>
             <div class="text-md-start">
-              <button class="btn btn-start rounded-1">Mulai Sewa Mobil</button>
+              <button class="btn btn-start rounded-1">
+                <a href="cars.html">Mulai Sewa Mobil</a>
+              </button>
             </div>
           </div>
           <div
@@ -103,7 +104,7 @@
                 <select
                   class="form-select"
                   aria-label="Default select example"
-                  id="driverType"
+                  id="tipeDriver"
                 >
                   <option value="default" selected>
                     Pilih Tipe Driver &nbsp; &nbsp; &nbsp; &nbsp;
@@ -118,15 +119,15 @@
                   type="date"
                   class="form-control"
                   placeholder="Pilih Tanggal"
-                  id="date"
+                  id="tanggal"
                 />
               </div>
               <div class="col-lg-auto col-xl-auto col-md-auto search__time">
-                <label>Pilih Waktu</label>
+                <labe>Pilih Waktu</labe>
                 <select
                   class="form-select"
                   aria-label="Default select example"
-                  id="pickupTime"
+                  id="waktuJemput"
                 >
                   <option value="false" selected>
                     Pilih Waktu &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
@@ -145,7 +146,7 @@
                     type="search"
                     class="form-control border-end-0"
                     placeholder="Jumlah Penumpang"
-                    id="passengerCount"
+                    id="jumlahPenumpang"
                     value="0"
                   />
                   <span class="input-group-text bg-white">
@@ -167,40 +168,42 @@
         <div class="row justify-content-center">
           <div class="col-lg-11">
             <div class="row" id="cars-container">
-              <!-- Example car card -->
-              <!-- Uncomment to display -->
-              <!--
-                        <div class="col-lg-4">
-                            <div class="card px-2 py-4">
-                                <img src="images/cars.png" class="card-img-top mt-4 text-center" />
+              <!-- <div class="col-lg-4">
+                            <div class="card  px-2 py-4">
+                                <img src="images/cars.png" class="card-img-top mt-4 text-center">
                                 <div class="card-body">
                                     <h5 class="card-title fs-6">Nama/Tipe Mobil</h5>
                                     <h5 class="card-title fs-5 fw-bold">Rp 430.000 / hari</h5>
-                                    <p class="cars__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <p class="cars__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
                                     <div class="row">
                                         <div class="col-1">
-                                            <img src="images/fi_users1.png" width="20px" alt="" />
+                                            <img src="images/fi_users1.png" width="20px" alt="" srcset="">
                                         </div>
-                                        <div class="col-10 ms-lg-2">4 orang</div>
+                                        <div class="col-10 ms-lg-2">
+                                            4 orang
+                                        </div>
                                     </div>
                                     <div class="row mt-2">
                                         <div class="col-1">
-                                            <img src="images/fi_settings.png" width="20px" alt="" />
+                                            <img src="images/fi_settings.png" width="20px" alt="" srcset="">
                                         </div>
-                                        <div class="col-10 ms-lg-2">Manual</div>
+                                        <div class="col-10 ms-lg-2">
+                                            Manual
+                                        </div>
                                     </div>
                                     <div class="row mt-2 mb-4">
                                         <div class="col-1">
-                                            <img src="images/fi_calendar.png" width="20px" alt="" />
+                                            <img src="images/fi_calendar.png" width="20px" alt="" srcset="">
                                         </div>
-                                        <div class="col-10 ms-lg-2">Tahun 2020</div>
+                                        <div class="col-10 ms-lg-2">
+                                            Tahun 2020
+                                        </div>
                                     </div>
 
                                     <a href="#" class="btn btn-utama" style="width:100%">Go somewhere</a>
                                 </div>
                             </div>
-                        </div>
-                        -->
+                        </div> -->
             </div>
           </div>
         </div>
@@ -229,42 +232,64 @@
               <li><a href="#" class="text-dark">FAQ</a></li>
             </ul>
           </div>
-          <div class="col-md-3 text-center">
-            <span class="fs-4">Binar Car Rental</span>
-            <p class="font-description">
-              Binar Car Rental hadir untuk memberikan solusi kebutuhan
-              transportasi terbaik bagi anda.
-            </p>
+          <div class="col-md-3">
+            <div>
+              <p class="font-description">Connect with us</p>
+              <ul class="list-inline mb-3">
+                <li class="list-inline-item">
+                  <a href="#" class="text-dark"
+                    ><i class="bi bi-facebook"></i
+                  ></a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="#" class="text-dark"
+                    ><i class="bi bi-instagram"></i
+                  ></a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="#" class="text-dark"
+                    ><i class="bi bi-twitter"></i
+                  ></a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="#" class="text-dark"
+                    ><i class="bi bi-envelope"></i
+                  ></a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="#" class="text-dark"><i class="bi bi-chat"></i></a>
+                </li>
+              </ul>
+            </div>
           </div>
-        </div>
-        <hr class="my-4" />
-        <div class="text-center">
-          <p class="font-description">
-            © 2024 Binar Car Rental. All rights reserved.
-          </p>
+          <div class="col-md-3 text-md-end">
+            <a href="/" class="text-black text-decoration-none"
+              ><span class="fs-4">Najmi Raihan</span></a
+            >
+            <p class="text-muted">&copy; Binar 2022</p>
+          </div>
         </div>
       </div>
     </footer>
-
-    <!-- Bootstrap JS and dependencies -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-      integrity="sha384-oBqDVmMz4fnFO9gyb7N3UVON58D7kLExV2PTN5s2X9fhwP6Yg8j8j5b1eZT3Mk9n"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
-      integrity="sha384-pprnCz4f0oUgQfD9O5SRu5IVmYuZJm2dsR8aPjkRXrC93Sde8wKJcmxfT3dKRfW6"
-      crossorigin="anonymous"
-    ></script>
-
-    <!-- Nice Select JS -->
+    <!-- Script -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="scripts/nice-select2/dist/js/nice-select2.js"></script>
-    <script>
-      // Nice Select Initialization
-      $(document).ready(function () {
-        $("select").niceSelect();
-      });
-    </script>
+    <!-- Bootstrap -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js "
+      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3 "
+      crossorigin="anonymous "
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js "
+      integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD "
+      crossorigin="anonymous "
+    ></script>
+
+    <!-- Example Javascript -->
+    <script type="text/javascript" src="scripts/binar.js"></script>
+    <script type="text/javascript" src="scripts/app.example.js"></script>
+    <script type="text/javascript" src="scripts/car.example.js"></script>
+    <script type="text/javascript" src="scripts/main.example.js"></script>
   </body>
 </html>
